# flutter-aWords

./: .gitignore  404.html  README.md  copyright  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: ci.yml
apps/aurora/: .gitignore
apps/aurora/aWords/: com.keygenqt.aWords.pro
apps/mobile/lib/: main.dart
apps/mobile/web/: index.html  manifest.json
apps/server/: .gitignore  _configuration.yaml  analysis_options.yaml  build.sh  phpliteadmin.config.php  pubspec.yaml
apps/server/data/: hello.c
apps/server/lib/: di.dart  runner.dart  server_awords.dart
apps/server/odbc/: .gitignore  CMakeLists.txt  hello.c  hello.h  main.c
apps/server/public/: error.html  index.html
apps/server/web/: error.html
apps/website/: .gitignore  build.sh  pubspec.yaml
aurora/: .gitignore
aurora/aWords/: com.keygenqt.aWords.desktop  com.keygenqt.aWords.pro
data/icon/: icon.xcf
docker/: _env  compose.yml
docker/builder/: Dockerfile
docker/nginx/: default.conf
docker/php/: Dockerfile  local.ini
docker/runner/: Dockerfile
docker/ubuntu-build/: Dockerfile
docs/: index.md
docs/assets/: custom.css
docs/mobile/: index.md
docs/server/: index.md  libraries.md
docs/web/: index.md  libraries.md
flutter/: README.md  pubspec.yaml
flutter/lib/: main.dart
flutter/scripts/: build_web_aurora.sh
flutter/test/: widget_test.dart
mobile/: index.html
search/: search_index.json
server/: index.html
server/libraries/: index.html
server_doc/api/: __404error.html  index.html  index.json  search.html
web/: index.html
web/libraries/: index.html
(+663 files in other folders)
